510-labs/010-simpleapp/kubernetes/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    acm: acm-simple-app
  name: acm-simple-app
