510-labs/010-simpleapp/kubernetes/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    acm: acm-simple-app
    app: httpd
  name: httpd
  namespace: acm-simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - image: rhscl/httpd-24-rhel7
        name: httpd
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: httpd-content
          readOnly: true
          mountPath: /opt/rh/httpd24/root/var/www/html
      volumes:
      - name: httpd-content
        secret:
          secretName: httpd-content
          defaultMode: 420
