510-labs/010-simpleapp/kubernetes/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    acm: acm-simple-app
    app: httpd
  name: httpd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpd
