510-labs/010-simpleapp/kubernetes/manifest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    acm: acm-simple-app
    app: httpd
  name: httpd
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: httpd
